# OpenCL_example

./: 4_gemm_BAK.7z
1_query_platform_device/: CMakeLists.txt
1_query_platform_device/src/: cl_query_platform_device.cpp
2_vector_add/src/: vec_add.cpp
3_matrix_multiply/: CMakeLists.txt
3_matrix_multiply/kernel/: 10-5.cl  matrix_multiply.cl
3_matrix_multiply/src/: matrix_multiply.cpp
4_gemm/: CMakeLists.txt  analyse.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  readme.md  问题.txt
4_gemm/inc/: util.h
4_gemm/kernel/: kernel1.txt  kernel2.txt  kernel3.txt  kernel4.txt  kernel5.txt
temp/: cl_test_half.cpp  cl_test_printf.cpp
temp/kernels/: cl_test_half.cl  cl_test_printf.cl
template/: build.py
